--- a/content/tutorials/csharp/index.mdx
+++ b/content/tutorials/csharp/index.mdx
@@ -1,11 +1,6 @@
 ---
-title:  "Jmeter build using Maven"
+title:  "Tutorials"
 date: "2019-02-08T21:40:32.169Z"
 categories: tech
 ---
-POM to automatically run JMeter as part of Continuos Integration (CI)</h3>
 
-There is not much information on the web to do the same and I had spent a significant about of effort to get it working.
-
-Hopefully, the attached pom should provide a base for anyone looking for a starting point
-This script assumes that you are trying to use your custom JMeter build along with plugins.
