--- a/src/tutorials/csharp/02-csharp_vs_java_types.mdx
+++ b/src/tutorials/csharp/02-csharp_vs_java_types.mdx
@@ -8,6 +8,8 @@ repository: pradeepvemulakonda
 staticman.branch: master
 toc: true
 ---
+import CompareLang from '../../components/compare/compare-lang';
+import CompareTab from '../../components/compare/tab';
 
 Introduction to C# and Java type systems. Links to details are provided for reference.
 
@@ -27,7 +29,7 @@ This topic contains the following sections:
 
 #### <a name="headTypes"></a> Types
 
-<compare-lang>
-    <compare-tag>First</compare-tag>
-    <compare-tag>Second</compare-tag>
-</compare-lang>
+<CompareLang>
+    <CompareTab>First</CompareTab>
+    <CompareTab>Second</CompareTab>
+</CompareLang>
