Modules are resolved by webpack based on the gatsby-node.js config

--- a/content/tutorials/csharp/02-csharp_vs_java_types.mdx
+++ b/content/tutorials/csharp/02-csharp_vs_java_types.mdx
@@ -8,8 +8,9 @@ repository: pradeepvemulakonda
 staticman.branch: master
 toc: true
 ---
-import CompareLang from '../../components/compare/compare-lang';
-import CompareTab from '../../components/compare/tab';
+
+import CompareLang from 'components/compare/compare-lang';
+import CompareTab from 'components/compare/tab';
 
 Introduction to C# and Java type systems. Links to details are provided for reference.
 
