working source code example

--- a/content/tutorials/csharp/02-csharp_vs_java_types.mdx
+++ b/content/tutorials/csharp/02-csharp_vs_java_types.mdx
@@ -11,7 +11,7 @@ toc: true
 
 import CompareLang from 'components/compare/compare-lang';
 import CompareTab from 'components/compare/tab';
-import MDX from '@mdx-js/runtime'
+import {MDXTag} from '@mdx-js/tag'
 
 Introduction to C# and Java type systems. Links to details are provided for reference.
 
@@ -33,11 +33,14 @@ This topic contains the following sections:
 
 <CompareLang>
     <CompareTab>
-      <MDX>
-        ```xml
-            class A {}
-        ```
-      </MDX>
+     <MDXTag name="code" children={
+       `
+       class Java {
+         
+       }
+       `
+     } >
+     </MDXTag>
     </CompareTab>
     <CompareTab>
       test
