removed any spaces/indent

--- a/content/tutorials/csharp/02-csharp_vs_java_types.mdx
+++ b/content/tutorials/csharp/02-csharp_vs_java_types.mdx
@@ -33,17 +33,27 @@ This topic contains the following sections:
 
 <CompareLang>
     <CompareTab>
+      This is the change for jumbolabamba
       <CodeBlock>
         {
           `
           class Java {
-              
+              public static String test = "testing";
           }
-        `
+         `
         }
       </CodeBlock>
     </CompareTab>
     <CompareTab>
-      test
+      This is the change for jumbolabamba
+      <CodeBlock>
+        {
+          `
+          class Java {
+              public static String test = "testing";
+          }
+         `
+        }
+      </CodeBlock>
     </CompareTab>
 </CompareLang>
