--- a/content/tutorials/index.mdx
+++ b/content/tutorials/index.mdx
@@ -1,7 +1,7 @@
 ---
 title:  "Tutorials"
 date: "2019-02-08T21:40:32.169Z"
-categories: tech
+categories: ['tech']
 ---
 
 [`csharp`](/tutorials/csharp)
