added code to render prismjs and compare tabs

--- a/content/tutorials/csharp/02-csharp_vs_java_types.mdx
+++ b/content/tutorials/csharp/02-csharp_vs_java_types.mdx
@@ -27,14 +27,21 @@ This topic contains the following sections:
 
 #### <a name="headTypes"></a> Types
 
-```compare
-//C#
-public class Csharp {
+````compare
+  ---
+  This is the c sharp class
+  ```csharp
+  public static void main () {
 
-}
+  }
+  ```
+  This is at the end
 
-//Java
-public class Java {
-
-}
-```
+  ---
+  This is the Java class
+  ```csharp
+  public static void main () {
+    
+  }
+  ```
+````
