--- a/content/tutorials/csharp/02-csharp_vs_java_types.mdx
+++ b/content/tutorials/csharp/02-csharp_vs_java_types.mdx
@@ -1,7 +1,7 @@
 ---
 layout: page-collection
 title: 'C# for Java Developers: Types'
-categories: csharp
+categories: ["csharp"]
 comments: true
 classes: wide
 repository: pradeepvemulakonda
