Update csharp “02-csharp_vs_java_types”

--- a/content/tutorials/csharp/02-csharp_vs_java_types.mdx
+++ b/content/tutorials/csharp/02-csharp_vs_java_types.mdx
@@ -1,12 +1,12 @@
 ---
 layout: page-collection
 title: 'C# for Java Developers: Types'
-categories: ["csharp"]
+categories:
+  - csharp
 comments: true
 classes: wide
 repository: pradeepvemulakonda
 staticman.branch: master
-toc: true
 ---
 
 Introduction to C# and Java type systems. Links to details are provided for reference.
@@ -29,19 +29,13 @@ This topic contains the following sections:
 
 ````compare
   ---
-  This is the c sharp class
+  Keyword "class" is used to create a class
   ```csharp
-  public static void main () {
-
-  }
+  public class CSharpClass {}
   ```
-  This is at the end
-
   ---
-  This is the Java class
+  Keyword "class" is used to create a class
   ```csharp
-  public static void main () {
-    
-  }
+  public class JavaClass {}
   ```
 ````
