--- a/content/tutorials/java/01-atoms.mdx
+++ b/content/tutorials/java/01-atoms.mdx
@@ -1,33 +1,19 @@
 ---
 layout: page-collection
-title:  "Atoms"
-categories: ["physics", "chemistry"]
+title: Atoms
+categories:
+  - physics
+  - chemistry
 comments: true
 classes: wide
 repository: pradeepvemulakonda
 staticman.branch: master
-toc: true
 ---
+An atom is the smallest constituent unit of ordinary matter that has the properties of a chemical element. Every solid, liquid, gas, and plasma is composed of neutral or ionized atoms. Atoms are extremely small; typical sizes are around 100 picometers (a ten-billionth of a meter, in the short scale).[wiki](https://en.wikipedia.org/wiki/Atom#)
 
-This page draws comparison between java and c# at an API level and tries to make it simple for C# or Java developers to gain either skills.
+What does a Java tutorial talk about atoms?
+Before we talk about performance of computer code, memory, objects we should understand the basics of how computers work.
 
-This is part of my journey in learning C# as a Java dev and thought it might help fellow devs to create this document.
+As part of this tutorial, I will lightly touch upon the basics of physics and chemistry including solid state physics. I will add multiple references to the content and if you feel that this is not for you, skip directly to [Intro](Java introduction).
 
-#### Introduction:
-
-Java and C# are both complied languages. Both languages are object oriented and support functional constructs.
-
-Both languages are written to be compiled to an intermediate language. And need a virtual machine/runtime to execute on the target systems.
-
-Both languages have automated garbage collection and use heap as the primary storage mechanism.
-
-> Initially I will not dwell into the differences but will try to draw parallels between the language features and API's.
-
-#### Specifications
-
-- *Java Specifications:* [Java SE Specification](https://docs.oracle.com/javase/specs/jls/se11/html/index.html)
-- *C# Specifications:* [C# 6 draft specs](https://github.com/dotnet/csharplang/tree/master/spec)
-
-#### Runtime
-- *JVM Specification:* [JVM Specification](https://docs.oracle.com/javase/specs/jvms/se11/html/index.html)
-- *CLR Specification:* [CLR Specification](https://www.ecma-international.org/publications/standards/Ecma-335.htm)
+<iframe src="//commons.wikimedia.org/wiki/File:Atomic_orbitals_and_periodic_table_construction.ogv?embedplayer=yes" width="854" height="480" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
