Update java “01-atoms”

--- a/content/tutorials/java/01-atoms.mdx
+++ b/content/tutorials/java/01-atoms.mdx
@@ -14,6 +14,6 @@ An atom is the smallest constituent unit of ordinary matter that has the propert
 What does a Java tutorial talk about atoms?
 Before we talk about performance of computer code, memory, objects we should understand the basics of how computers work.
 
-As part of this tutorial, I will lightly touch upon the basics of physics and chemistry including solid state physics. I will add multiple references to the content and if you feel that this is not for you, skip directly to [Intro](Java introduction).
+As part of this tutorial, I will lightly touch upon the basics of physics and chemistry including solid state physics. I will add multiple references to the content and if you feel that this is not for you, skip directly to \[Intro](/tutorials/java/00_java_introduction/).
 
 <iframe src="//commons.wikimedia.org/wiki/File:Atomic_orbitals_and_periodic_table_construction.ogv?embedplayer=yes" width="854" height="480" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
