--- a/content/tutorials/java/01_atoms.mdx
+++ b/content/tutorials/java/01_atoms.mdx
@@ -9,6 +9,8 @@ classes: wide
 repository: pradeepvemulakonda
 staticman.branch: master
 ---
+import ResponsiveEmbed from 'react-responsive-embed'
+
 An atom is the smallest constituent unit of ordinary matter that has the properties of a chemical element. Every solid, liquid, gas, and plasma is composed of neutral or ionized atoms. Atoms are extremely small; typical sizes are around 100 picometers (a ten-billionth of a meter, in the short scale).[wiki](https://en.wikipedia.org/wiki/Atom#)
 
 What does a Java tutorial talk about atoms?
@@ -16,4 +18,12 @@ Before we talk about performance of computer code, memory, objects we should und
 
 As part of this tutorial, I will lightly touch upon the basics of physics and chemistry including solid state physics. I will add multiple references to the content and if you feel that this is not for you, skip directly to [Intro](Java introduction).
 
-<iframe src="//commons.wikimedia.org/wiki/File:Atomic_orbitals_and_periodic_table_construction.ogv?embedplayer=yes" width="854" height="480" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<ResponsiveEmbed src="//commons.wikimedia.org/wiki/File:Atomic_orbitals_and_periodic_table_construction.ogv?embedplayer=yes" 
+        width="600px" 
+        height="400px" 
+        display="initial"
+        position="relative"
+        allowFullScreenwebkitAllowFullScreen 
+        mozallowfullscreen 
+        allowFullScreen>
+</ResponsiveEmbed>
