atoms and bands

--- a/content/tutorials/java/01_atoms.mdx
+++ b/content/tutorials/java/01_atoms.mdx
@@ -18,10 +18,27 @@ Before we talk about performance of computer code, memory, objects we should und
 
 As part of this tutorial, I will lightly touch upon the basics of physics and chemistry including solid state physics. I will add multiple references to the content and if you feel that this is not for you, skip directly to [Intro](Java introduction).
 
+## Bohr Model
+Although not accurate gives us a basic understanding of the hydrogen atom. An atom consits of a central 
+nucleus consists of protons and neutrons and an outer shell consisting of electrons. 
+The electrons can the orbitals and could jump between these orbits only in discrete changes of 
+energy corresponding to absorption or radiation of a photon 
+
+> The red nucleus contains the neutrons and protons
+> The blue electron revolves around the central nucleus
+![Bohr Model](./bohr_atom.gif)
+
+To be more precise, the orbitals are not perfect circles but pocesses the chanrecteristic of an electron cloud.
+The electrons in an atom are attracted to the protons in the nucleus by the electromagnetic force. 
+This force binds the electrons inside an electrostatic potential well surrounding the smaller nucleus, which means that an external source of energy is needed for the electron to escape. 
+The closer an electron is to the nucleus, the greater the attractive force. Hence electrons bound near the center of the potential well require more energy to escape than those at greater separations.
+Electrons, like other particles, have properties of both a [particle and a wave](https://en.wikipedia.org/wiki/Wave%E2%80%93particle_duality).
+
+[Atomic Orbital](https://en.wikipedia.org/wiki/Atomic_orbital)
+
+## Animation of Atomic orbitals in the periodic table
 <ResponsiveEmbed src="//commons.wikimedia.org/wiki/File:Atomic_orbitals_and_periodic_table_construction.ogv?embedplayer=yes" 
         display="initial"
         position="relative"
-        allowFullScreenwebkitAllowFullScreen 
-        mozallowfullscreen 
         allowFullScreen>
 </ResponsiveEmbed>
