--- a/content/tutorials/java/01_atoms.mdx
+++ b/content/tutorials/java/01_atoms.mdx
@@ -10,6 +10,7 @@ repository: pradeepvemulakonda
 staticman.branch: master
 ---
 import ResponsiveEmbed from 'react-responsive-embed'
+import Bohr from './bohr.gif'
 
 An atom is the smallest constituent unit of ordinary matter that has the properties of a chemical element. Every solid, liquid, gas, and plasma is composed of neutral or ionized atoms. Atoms are extremely small; typical sizes are around 100 picometers (a ten-billionth of a meter, in the short scale).[wiki](https://en.wikipedia.org/wiki/Atom#)
 
@@ -26,7 +27,7 @@ energy corresponding to absorption or radiation of a photon
 
 > The red nucleus contains the neutrons and protons
 > The blue electron revolves around the central nucleus
-![Bohr Model](./bohr_atom.gif)
+<img src={Bohr} alt="Bohr Model"></img>
 
 To be more precise, the orbitals are not perfect circles but pocesses the chanrecteristic of an electron cloud.
 The electrons in an atom are attracted to the protons in the nucleus by the electromagnetic force. 
