--- a/content/tutorials/java/02_bands.mdx
+++ b/content/tutorials/java/02_bands.mdx
@@ -11,6 +11,7 @@ toc: true
 
 ---
 import ResponsiveEmbed from 'react-responsive-embed'
+import Bands from './band.svg'
 
 ## Band Theory of solids
 
@@ -57,9 +58,9 @@ Valence electrons also tend to be the electrons that specifically participate in
 
 ### Fermi level
 The Fermi level is the name given to the highest energy occupied electron orbital at absolute zero.
+<img src={Bands} alt="Bands"></img>
 
-![Band filling](./Band_filling_diagram.svg)
->The shade follows the Fermi–Dirac distribution (black = all states filled, white = no state filled). 
->In metals and semimetals the Fermi level EF lies inside at least one band. 
->In insulators and semiconductors the Fermi level is inside a band gap; however, 
->in semiconductors the bands are near enough to the Fermi level to be thermally populated with electrons or holes.
+> The shade follows the Fermi–Dirac distribution (black = all states filled, white = no state filled). 
+> In metals and semimetals the Fermi level EF lies inside at least one band. 
+> In insulators and semiconductors the Fermi level is inside a band gap; however, 
+> in semiconductors the bands are near enough to the Fermi level to be thermally populated with electrons or holes.
