--- a/content/tutorials/java/03_fermi.mdx
+++ b/content/tutorials/java/03_fermi.mdx
@@ -12,7 +12,7 @@ toc: true
 ---
 import ResponsiveEmbed from 'react-responsive-embed'
 import FermiDirac from './fd.svg'
-import FermiVsTemp from './fermi.gif'
+import FermiVsTemp from './Fermi.gif'
 import BandSemiConductor from './ffun.webp'
 
 ## Fermi Level
