updated webp to jpg

--- a/content/tutorials/java/03_fermi.mdx
+++ b/content/tutorials/java/03_fermi.mdx
@@ -13,7 +13,7 @@ toc: true
 import ResponsiveEmbed from 'react-responsive-embed'
 import FermiDirac from './fd.svg'
 import FermiVsTemp from './fermig.gif'
-import BandSemiConductor from './ffun.webp'
+import BandSemiConductor from './ffun.jpg'
 
 ## Fermi Level
 
