added  images folder

--- a/content/tutorials/java/01_atoms.mdx
+++ b/content/tutorials/java/01_atoms.mdx
@@ -10,7 +10,7 @@ repository: pradeepvemulakonda
 staticman.branch: master
 ---
 import ResponsiveEmbed from 'react-responsive-embed'
-import Bohr from './bohr.gif'
+import Bohr from './images/bohr.gif'
 
 An atom is the smallest constituent unit of ordinary matter that has the properties of a chemical element. Every solid, liquid, gas, and plasma is composed of neutral or ionized atoms. Atoms are extremely small; typical sizes are around 100 picometers (a ten-billionth of a meter, in the short scale).[wiki](https://en.wikipedia.org/wiki/Atom#)
 
