--- a/content/tutorials/java/02_bands.mdx
+++ b/content/tutorials/java/02_bands.mdx
@@ -11,7 +11,7 @@ toc: true
 
 ---
 import ResponsiveEmbed from 'react-responsive-embed'
-import Bands from './band.svg'
+import Bands from './images/band.svg'
 
 ## Band Theory of solids
 
