--- a/content/tutorials/java/03_fermi.mdx
+++ b/content/tutorials/java/03_fermi.mdx
@@ -11,9 +11,9 @@ toc: true
 
 ---
 import ResponsiveEmbed from 'react-responsive-embed'
-import FermiDirac from './fd.svg'
-import FermiVsTemp from './fermig.gif'
-import BandSemiConductor from './ffun.jpg'
+import FermiDirac from './images/fd.svg'
+import FermiVsTemp from './images/fermig.gif'
+import BandSemiConductor from './images/ffun.jpg'
 
 ## Fermi Level
 
