--- a/content/tutorials/java/04_solids.mdx
+++ b/content/tutorials/java/04_solids.mdx
@@ -8,12 +8,10 @@ repository: pradeepvemulakonda
 staticman.branch: master
 toc: true
 ---
-
----
 import ResponsiveEmbed from 'react-responsive-embed'
-import Cubic from './cubic.svg'
-import BodyCenteredCubic from './lbc_cubic.svg'
-import FaceCenteredCubic from './lfc_cubic.svg'
+import Cubic from './images/cubic.svg'
+import BodyCenteredCubic from './images/lbc_cubic.svg'
+import FaceCenteredCubic from './images/lfc_cubic.svg'
 import ResponsiveTable from 'components/responsive-table'
 
 ### Solid materials
