--- a/content/tutorials/java/05_bandgap.mdx
+++ b/content/tutorials/java/05_bandgap.mdx
@@ -8,36 +8,40 @@ repository: pradeepvemulakonda
 staticman.branch: master
 toc: true
 ---
-import Lattice from './images/1dlattice.svg'
-import Atom1 from './images/atoms_1.svg'
-import Atom2 from './images/atoms_2.svg'
-import Atom3 from './images/atoms_3.svg'
-import EnergyVsWells from './images/energyvswells.svg'
-import EnergyVsInterAtomicDistance from './images/evsias.svg'
-import PotentialWell from './images/potentialwell.svg'
-import InteractingWell from './images/interactingwell.svg'
+import Atom1 from './images/atom1.svg'
+import Atom2 from './images/atom2.svg'
+import Atom3 from './images/atom3.svg'
+import Atom4 from './images/atom4.svg'
+import Atom5 from './images/atom5.svg'
+import Atom6 from './images/atom6.svg'
+import Atom7 from './images/atom7.svg'
+import Atom8 from './images/atom8.svg'
+import Atom9 from './images/atom9.svg'
 
-<figure>
- <img src={Lattice} alt="Lattice"></img>
-</figure>
 <figure>
  <img src={Atom1} alt="Atom with energy level"></img>
 </figure>
 <figure>
- <img src={Atom2} alt="Atoms with ineracting forces"></img>
+ <img src={Atom2} alt="Atoms with interacting forces"></img>
 </figure>
 <figure>
- <img src={Atom3} alt="Atomsin a lattice"></img>
+ <img src={Atom3} alt="Atoms in a lattice"></img>
 </figure>
 <figure>
- <img src={EnergyVsWells} alt="Graph energy vs no of wells"></img>
+ <img src={Atom4} alt="Graph energy vs no of wells"></img>
 </figure>
 <figure>
- <img src={EnergyVsInterAtomicDistance} alt="Energy vs interatomic distance"></img>
+ <img src={Atom5} alt="Energy vs interatomic distance"></img>
 </figure>
 <figure>
- <img src={PotentialWell} alt="Potential well"></img>
+ <img src={Atom6} alt="Potential well"></img>
 </figure>
 <figure>
- <img src={InteractingWell} alt="Interacting well"></img>
+ <img src={Atom7} alt="Interacting well"></img>
+</figure>
+<figure>
+ <img src={Atom8} alt="Lattice"></img>
+</figure>
+<figure>
+ <img src={Atom9} alt="Interacting wells"></img>
 </figure>
