--- a/content/tutorials/java/05_bandgap.mdx
+++ b/content/tutorials/java/05_bandgap.mdx
@@ -23,6 +23,7 @@ import PIB from './images/pib.svg'
 # Band diagrams
 Before we go to the details of band diagrams. Lets understand on a very basic level what energy bands
 are and how they form.
+[Quantum Mechanical Model](https://www.khanacademy.org/science/physics/quantum-physics/quantum-numbers-and-orbitals/a/the-quantum-mechanical-model-of-the-atom)
 
 ## Hydrogen Atom
 Below is a representation of a hydrogen atom with the sub atomic radius of ~0.52 A(Amstrongs). 
