--- a/content/tutorials/java/06_waves.mdx
+++ b/content/tutorials/java/06_waves.mdx
@@ -13,8 +13,23 @@ import SW from './images/standing-wave.svg'
 
 
 # Band diagrams
+At the beginning of the twentieth century, experimental evidence suggested that atomic particles were also [wave-like](https://en.wikipedia.org/wiki/Wave%E2%80%93particle_duality) in nature. 
+For example, electrons were found to give diffraction patterns when passed through a double slit in a similar way to light waves.
+Therefore, it was reasonable to assume that a wave equation could explain the behaviour of atomic particles. 
+
+Schrodinger was the first person to write down such a [wave equation](https://en.wikipedia.org/wiki/Schr%C3%B6dinger_equation). Much discussion then centred on what the equation meant. 
+The eigenvalues of the wave equation were shown to be equal to the energy levels of the quantum mechanical system, 
+and the best test of the equation was when it was used to solve for the energy levels of the Hydrogen atom, and the energy levels were found to be in accord with Rydberg's Law. 
+
+It was initially much less obvious what the wavefunction of the equation was. After much debate, the wavefunction is now accepted to be a probability distribution. 
+The Schrodinger equation is used to find the allowed energy levels of quantum mechanical systems (such as atoms, or transistors). The associated wavefunction gives the probability of finding the particle at a certain position.
+
+
 [Waves](https://en.wikibooks.org/wiki/High_School_Chemistry/Schrodinger%27s_Wave_Functions)
 
+In layman terms: Only a specific set of waves can exist in nature (becuase we cannot have infinit potential). 
+The valid wave equations are defined by Schrodinger equation. As you see in the below diagram only valid wavelengths 
+can exist and as an atomic particle can be represented as a wave particle, the energies(frequencies) can only be discrete and not conitnous.
 <figure>
  <img src={SW} alt="Standing wave"></img>
 </figure>
