--- a/content/tutorials/java/05_bandgap.mdx
+++ b/content/tutorials/java/05_bandgap.mdx
@@ -70,36 +70,55 @@ The below diagram represents a [particle in a box](https://en.wikipedia.org/wiki
  <figcaption> Initial wavefunctions for the first four states in a one-dimensional particle in a box</figcaption>
 </figure>
 In a the interatomic space is more than the wave/orbitals the energy levels are discrete.
+
+#### When two atoms are not interacting the potential wells are discrete and no interacting.
 <figure>
- <img src={Atom2} alt="Atoms with interacting forces"></img>
+ <img src={Atom2} alt="Atoms with no interacting forces"></img>
 </figure>
-When the atoms are tightly packed for eample in a semi conductor. 
-The energy levels interact and energy gets split into multiple lebels each. There levels are batched together into energy bands.
+
+#### When two atoms interact, the bands start splitting.
 <figure>
  <img src={Atom3} alt="Atoms in a lattice"></img>
 </figure>
 
-In a 1D lattice the atom's energy elevls interact with each other resulting in band formation.
+#### If more than two atoms start interacting the discrete levels split and start to form discrete bands.
 <figure>
  <img src={Atom4} alt="Graph energy vs no of wells"></img>
 </figure>
 
+#### In a 1D lattice the atom's energy elevls interact with each other resulting in band formation.
+<figure>
+ <img src={Atom8} alt="Lattice"></img>
+ <figcaption>Interacting potential wells</figcaption>
+</figure>
+
+#### The below diagram shows Eneregy vs no of Interaction wells.
+When the atoms are tightly packed for eample in a semi conductor. 
+The energy levels interact and energy gets split into multiple levels each. 
+There levels are batched together into energy bands.
+
+As the no of interacting wells increase the energy bands split into discrete levels.
+<figure>
+ <img src={Atom9} alt="Interacting wells"></img>
+</figure>
+
+In the above diagram in a solid, as the no of atoms are tightly packed together the potential wells interact.
+As two energy levels cannot exist in the same enegry state, the energy levels split and as the no of interacting
+wells increase it slowly forms bands.
+
+### Potential Wells interacting in a 1D lattice
 <figure>
  <img src={Atom6} alt="Potential well"></img>
  <figcaption>Potential wells in a 1D lattice</figcaption>
 </figure>
 
-## Semi Conductor Band diagram
+### Semi Conductor Band diagram
+In the below diagram we see the band diagram of a semiconductor. As you can see as the band gap voltage increases
+the elements transitions from a conductor to a semiconductor and ultimately to an insulator.
+
+As you can see the band gap in a germanium element is only 0.6 volts and if we apply an external voltage of more than 0.6 v 
+the semiconductor allows for conduction.  
 <figure>
  <img src={Atom5} alt="Energy vs interatomic distance"></img>
  <figcaption>Energy vs interatomic distance</figcaption>
-</figure>
-
-
-<figure>
- <img src={Atom8} alt="Lattice"></img>
- <figcaption>Interacting potential wells</figcaption>
-</figure>
-<figure>
- <img src={Atom9} alt="Interacting wells"></img>
-</figure>
+</figure> 
